# slang

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: release.yml  tests.yml
assets/: README.md
assets/sounds/: README.md
scripts/ci/: build_and_test.sh  install_linux_deps.sh
src/: app.c  app.h  application.c  application.h  game_ui.c  game_ui.h  main.c  sdl_context.c  sdl_context.h  snake.c  snake.h  utils.c  utils.h
src/game/: snake_hud.c  snake_hud.h  snake_input.c  snake_input.h  snake_menu.c  snake_menu.h  snake_options_layout.c  snake_options_layout.h  snake_render.c  snake_render.h  snake_state.c  snake_state.h  snake_text.c  snake_text.h  snake_util.c  snake_util.h  utils.c  utils.h
src/helpers/: audio.c  audio.h  window.c  window.h
src/modules/: audio.c  audio.h  config.c  config.h  config_internal.h  ui.c  ui.h  window.c  window.h  window_frame.c  window_frame.h
src/utils/: dynamic_array.c  dynamic_array.h  vector.c  vector.h
tests/: config_tests.c  dynamic_array_tests.c  vector_tests.c
